--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+    <!--library to create Telegram Bots-->
+    <dependency>
+      <groupId>org.telegram</groupId>
+      <artifactId>telegrambots</artifactId>
+      <version>3.6</version>
+    </dependency>
   </dependencies>
 
   <build>
